--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/classification_data_large.csv filter=lfs diff=lfs merge=lfs -text
+classification_data_large.csv filter=lfs diff=lfs merge=lfs -text
